<resources>
    <string name="app_name">Labyrinth</string>
    <string name="next_turn">Next Turn</string>
    <string name="start_local">Start game</string>
    <string name="back">Back</string>
    <string name="log_caption">Log</string>
    <string name="next_player"> &gt; </string>
    <string name="prev_player"> &lt; </string>
    <string name="new_game"> New Game </string>
    <string name="add">Add</string>
    <string name="menu">Menu</string>
    <string name="delete">Delete</string>
    <string name="ready">Ready!</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="field_editor">Field Editor</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="title_activity_multiplayer">MultiplayerActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="load_game">Load Game</string>
    <string name="check">Check</string>
</resources>