<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context="ru.spbau.labyrinth.EditorActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="900dp"
        android:layout_height="900dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443"
        app:srcCompat="@drawable/labyrinth_red" />

    <ru.spbau.labyrinth.customviews.OuterScrollView
        android:id="@+id/outerScroll"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:scrollbars="none"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:id="@+id/horizontalScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <view
                android:id="@+id/fieldView"
                class="ru.spbau.labyrinth.customviews.EditFieldView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </HorizontalScrollView>
    </ru.spbau.labyrinth.customviews.OuterScrollView>

    <Button
        android:id="@+id/loadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/load"
        app:layout_constraintLeft_toLeftOf="@+id/outerScroll"
        app:layout_constraintTop_toBottomOf="@+id/outerScroll" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        app:layout_constraintRight_toRightOf="@+id/outerScroll"
        app:layout_constraintTop_toBottomOf="@+id/outerScroll" />

    <Button
        android:id="@+id/checkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/check"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toEndOf="@+id/loadButton"
        app:layout_constraintTop_toBottomOf="@+id/outerScroll" />

</android.support.constraint.ConstraintLayout>
